gcc/testsuite/rust/rustc/ui/error-codes/E0572.rs
const FOO: u32 = return 0; // { dg-error ".E0572." "" { target *-*-* } }

fn main() {}

